# cli-calculator

./: .gitignore  ABOUT.md  CMakeLists.txt  INSTALL.md  README.md  nushell-config.nu  powershell-profile.ps1
include/: calculator.h  fraction.h  parser.h  repl.h
src/: calculator.cpp  fraction.cpp  main.cpp  parser.cpp  repl.cpp
